Fixed bugs in .atk-layout and .atk-tableAction

--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -25,7 +25,7 @@ html, body, .atk-layout  {
 		height: auto;
 		vertical-align: top;
 		width: 0.01em;
-		.atk-layoutExpand {
+		&.atk-layoutExpand {
 			width: auto;
 		}
 	}
