--- a/framework/less/misc.less
+++ b/framework/less/misc.less
@@ -90,7 +90,7 @@ a {
 }
 *[class*=icon] {
   &:before {
-    margin-left: 0;
-    margin-right: 0; 
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 }
