Resolved tooltip bug.

--- a/framework/less/jqueryui.less
+++ b/framework/less/jqueryui.less
@@ -292,7 +292,7 @@
 }
 
 // Tooltip
-.ui-tooltip {
+.ui-tooltip.ui-widget-content {
     &:extend([class*="atk-text"][class*="-size--s"]);
     .box-shadow(0 3px 7px rgba(0,0,0,0.5));
     .colorCheck(color, @tooltipColor, 100%);
